Fixed space between home and projects on mobile, made heading an h1 tag for google search optimization

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -122,7 +122,7 @@
         }
       }
 
-      h2 {
+      .im {
         font-size: 50px;
         font-weight: 300;
 
@@ -134,7 +134,7 @@
         }
       }
 
-      h3 {
+      .desc {
         font-size: 50px;
         font-weight: 300;
         line-height: 60px;
