--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -20,6 +20,7 @@
         @include mobile {
           font-size: 40px;
           overflow-x: visible;
+          margin-top: 0px;
         };
     }
 
